force-app/main/default/objects/Patient_Appointment__c/Patient_Appointment__c.object-meta.xml
<CustomObject>
    <label>Patient Appointment</label>
    <pluralLabel>Patient Appointments</pluralLabel>
    <nameField>
        <label>Appointment Number</label>
        <type>AutoNumber</type>
        <displayFormat>APPT-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks patient appointments for healthcare administrators, including scheduling, provider assignment, and clinical notes.</description>
</CustomObject>