force-app/main/default/objects/Patient_Appointment__c/fields/Appointment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_Time__c</fullName>
    <label>Appointment Date &amp; Time</label>
    <type>DateTime</type>
    <required>true</required>
    <description>The scheduled date and time of the patient appointment.</description>
    <helpText>Enter the date and time the appointment is scheduled to begin.</helpText>
</CustomField>