force-app/main/default/objects/Patient_Appointment__c/fields/Clinical_Notes__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Notes__c</fullName>
    <label>Clinical Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Free-text clinical notes recorded during or after the appointment.</description>
    <helpText>Enter any relevant clinical observations, diagnoses, or post-appointment notes.</helpText>
</CustomField>