force-app/main/default/objects/Patient_Appointment__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <label>Duration (Minutes)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Expected duration of the appointment in minutes.</description>
    <helpText>Enter the expected duration of the appointment in minutes (e.g., 30, 60).</helpText>
</CustomField>