force-app/main/default/objects/Patient_Appointment__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <label>Patient Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Full name of the patient for this appointment.</description>
    <helpText>Enter the patient&apos;s full legal name.</helpText>
</CustomField>