force-app/main/default/objects/Patient_Appointment__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <label>Provider Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Name of the healthcare provider (doctor, nurse, specialist) assigned to this appointment.</description>
    <helpText>Enter the full name of the assigned healthcare provider.</helpText>
</CustomField>