force-app/main/default/objects/Patient_Appointment__c/listViews/All_Appointments.listView-meta.xml
<ListView>
    <fullName>All_Appointments</fullName>
    <label>All Appointments</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Patient_Name__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>Appointment_Date_Time__c</columns>
    <columns>Appointment_Status__c</columns>
    <columns>Appointment_Type__c</columns>
    <columns>Duration_Minutes__c</columns>
</ListView>